syntax = "proto3";

package NCloud.NFileStore.NProto;

option java_package = "ru.yandex.cloud.filestore.proto";
option go_package = "a.yandex-team.ru/cloud/filestore/public/api/protos";

////////////////////////////////////////////////////////////////////////////////
// Common message headers.

message THeaders
{
    // Trace identifier for logging.
    string TraceId = 1;

    // Idempotence identifier for retries.
    string IdempotenceId = 2;

    // Client identifier for client detection.
    string ClientId = 3;

    // Session identifier.
    string SessionId = 4;

    // Request timestamp.
    uint64 Timestamp = 5;

    // Request identifier.
    uint64 RequestId = 6;

    // Request timeout (in milliseconds).
    uint32 RequestTimeout = 7;
}
